# cpp-rl-lab

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/visualizer/: dashboard.css  dashboard.html  dashboard.js
configs/mazes/: basic.txt  complex.txt
docs/: architecture.md
include/agents/: agent.hpp  q_learning_agent.hpp  random_agent.hpp
include/cli/: command_line.hpp
include/core/: action.hpp  types.hpp
include/env/: environment.hpp  maze_environment.hpp  maze_layout.hpp
include/metrics/: metrics_logger.hpp
include/render/: dashboard.hpp  trace_recorder.hpp
include/training/: trainer.hpp
include/utils/: filesystem.hpp
scripts/: build.sh  serve_dashboard.sh  test.sh  train_demo.sh
src/: main.cpp
src/agents/: q_learning_agent.cpp  random_agent.cpp
src/cli/: command_line.cpp
src/env/: maze_environment.cpp  maze_layout.cpp
src/metrics/: metrics_logger.cpp
src/render/: dashboard.cpp  trace_recorder.cpp
src/training/: trainer.cpp
src/utils/: filesystem.cpp
tests/: test_agents.cpp  test_environment.cpp  test_framework.hpp  test_main.cpp  test_maze_layout.cpp  test_render.cpp  test_training.cpp
